--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@ body {
         </div>
     </header>
 
-    <div class="video-container">
-        <div class="video-label">Doječa mater</div>
+      <div class="video-container">
+        <div class="video-label">Prvi dan doma</div>
         <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%">
             <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" 
-                    src="https://streamable.com/e/i3uwpe?autoplay=1&nocontrols=1" 
+                    src="https://iframe.mediadelivery.net/embed/372083/5c286cd4-c0a1-44bb-a609-c04f5ee97318?autoplay=true&loop=true&muted=true&preload=true&responsive=true" 
                     width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;">
             </iframe>
         </div>
@@ -114,6 +114,5 @@ body {
             </iframe>
         </div>
     </div>
-
 </body>
 </html>
