--- a/index.html
+++ b/index.html
@@ -18,74 +18,69 @@ body {
     height: auto;
     min-height: 100vh;
     overflow-y: auto;
+    gap: 2vw; /* Ensures consistent spacing between elements */
 }
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            padding: 2vw;
-            box-sizing: border-box;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 1.5vw;
-        }
-        header h2 {
-            margin: 0;
-            font-size: 1vw;
-            color: white;
-            font-weight: normal;
-            margin-top: 0.5vw; /* Added spacing between the title and subtitle */
-        }
-        header .left {
-            display: flex;
-            flex-direction: column;
-        }
-        .video-container {
-            position: relative;
-            width: 100%;
-            max-width: 3840px; /* Increased max width for high-res screens */
-            aspect-ratio: 16 / 9;
-            margin-bottom: 2vw;
-        }
-        iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-        .video-label {
-            position: absolute;
-            top: 1vw;
-            left: 1vw;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 0.5vw 1vw;
-            font-size: 1.2vw;
-            color: white;
-            border-radius: 0.3vw;
-            z-index: 2;
-        }
-        .video-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0);
-            z-index: 1;
-        }
 
-        @media only screen and (max-width: 768px) {
-            .video-container {
-                transform: rotate(90deg);
-                transform-origin: center;
-                width: 100vh; /* Adjust for rotated view */
-                height: 100vw; /* Adjust for rotated view */
-                overflow: hidden;
-            }
-        }
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    padding: 2vw;
+    box-sizing: border-box;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 1.5vw;
+}
+
+header h2 {
+    margin: 0;
+    font-size: 1vw;
+    color: white;
+    font-weight: normal;
+    margin-top: 0.5vw;
+}
+
+.video-container {
+    position: relative;
+    width: 100%;
+    max-width: 3840px;
+    aspect-ratio: 16 / 9;
+    margin-bottom: 2vw;
+}
+
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.video-label {
+    position: absolute;
+    top: 1vw;
+    left: 1vw;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 0.5vw 1vw;
+    font-size: 1.2vw;
+    color: white;
+    border-radius: 0.3vw;
+    z-index: 2;
+}
+
+.video-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    z-index: 1;
+}
+
     </style>
 </head>
 <body>
@@ -96,7 +91,7 @@ body {
         </div>
     </header>
 
-      <div class="video-container">
+    <div class="video-container">
         <div class="video-label">Prvi dan doma</div>
         <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%">
             <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" 
@@ -105,7 +100,8 @@ body {
             </iframe>
         </div>
     </div>
-      <div class="video-container">
+
+    <div class="video-container">
         <div class="video-label">Prvi dan doma</div>
         <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%">
             <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" 
