--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ iframe {
 <body>
     <header>
         <div class="left"> <!-- Container for the header text -->
-            <h1>Karlo Grošelj - gibljive slike</h1> <!-- Main title of the page -->
+            <h1>Karlov album gibljivih slik</h1> <!-- Main title of the page -->
         </div>
     </header>
 
