--- a/nagi/index.html
+++ b/nagi/index.html
@@ -77,38 +77,19 @@ iframe {
 <body>
     <header>
         <div class="left"> <!-- Container for the header text -->
-            <h1>Karlov album gibljivih slik</h1> <!-- Main title of the page -->
+            <h1>Karlov album nagi gibljivih slik</h1> <!-- Main title of the page -->
         </div>
     </header>
 
     <div class="video-container"> <!-- Container for the second video -->
-        <div class="video-label">Prvi dan</div> <!-- Label for the second video -->
+        <div class="video-label">Kravica in teliček</div> <!-- Label for the second video -->
         <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
             <iframe allow="fullscreen" allowfullscreen height="100%" 
-                    src="https://iframe.mediadelivery.net/embed/372083/d9bfac04-b376-4561-8ac6-2ed9473302c3?preload=true&responsive=true" 
+                    src="https://iframe.mediadelivery.net/embed/372083/aec96ad9-7d8d-45b7-a2f5-12fb69084ba5?preload=true&responsive=true" 
                     width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"> <!-- Second video iframe -->
             </iframe>
         </div>
     </div>
   
-    <div class="video-container"> <!-- Container for the first video -->
-        <div class="video-label">Prvi dan doma</div> <!-- Label for the first video -->
-        <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
-            <iframe allow="fullscreen" allowfullscreen height="100%" 
-                    src="https://iframe.mediadelivery.net/embed/372083/139c5403-2504-4608-a22e-fb9783c8c2db?preload=true&responsive=true" 
-                    width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"> <!-- First video iframe -->
-            </iframe>
-        </div>
-    </div>
-
-    <div class="video-container"> <!-- Container for the second video -->
-        <div class="video-label">Doječa mater</div> <!-- Label for the second video -->
-        <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
-            <iframe allow="fullscreen" allowfullscreen height="100%" 
-                    src="https://iframe.mediadelivery.net/embed/372083/bd6ba4ad-2227-408b-8ea5-713cd26edf3d?preload=true&responsive=true" 
-                    width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"> <!-- Second video iframe -->
-            </iframe>
-        </div>
-    </div>
 </body>
 </html>
