--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ iframe {
     </header>
 
     <div class="video-container"> <!-- Container for the second video -->
-        <div class="video-label">Prvi dan</div> <!-- Label for the second video -->
+        <div class="video-label">Prvi dan—14. 1. 2025</div> <!-- Label for the second video -->
         <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
             <iframe allow="fullscreen" allowfullscreen height="100%" 
                     src="https://iframe.mediadelivery.net/embed/372083/d9bfac04-b376-4561-8ac6-2ed9473302c3?preload=true&responsive=true" 
@@ -92,7 +92,7 @@ iframe {
     </div>
   
     <div class="video-container"> <!-- Container for the first video -->
-        <div class="video-label">Prvi dan doma</div> <!-- Label for the first video -->
+        <div class="video-label">Prvi dan doma—18. 1. 2025</div> <!-- Label for the first video -->
         <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
             <iframe allow="fullscreen" allowfullscreen height="100%" 
                     src="https://iframe.mediadelivery.net/embed/372083/139c5403-2504-4608-a22e-fb9783c8c2db?preload=true&responsive=true" 
@@ -102,7 +102,7 @@ iframe {
     </div>
 
     <div class="video-container"> <!-- Container for the second video -->
-        <div class="video-label">Doječa mater</div> <!-- Label for the second video -->
+        <div class="video-label">Doječa mater—19. 1. 2025</div> <!-- Label for the second video -->
         <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
             <iframe allow="fullscreen" allowfullscreen height="100%" 
                     src="https://iframe.mediadelivery.net/embed/372083/bd6ba4ad-2227-408b-8ea5-713cd26edf3d?preload=true&responsive=true" 
