--- a/nagi/index.html
+++ b/nagi/index.html
@@ -8,7 +8,7 @@
 body {
     margin: 0; /* Removes default browser margin */
     padding: 0 1vw; /* Adds padding to the left and right edges of the page */
-    background-color: DarkGrey; /* Sets the background color of the page */
+    background-color: MistyRose; /* Sets the background color of the page */
     color: Black; /* Sets the text color */
     font-family: Arial, sans-serif; /* Sets the font family */
     display: flex; /* Uses flexbox layout */
@@ -82,7 +82,7 @@ iframe {
     </header>
 
     <div class="video-container"> <!-- Container for the second video -->
-        <div class="video-label">Kravica in teliček</div> <!-- Label for the second video -->
+        <div class="video-label">Kravica in teliček—19. 1. 2025</div> <!-- Label for the second video -->
         <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
             <iframe allow="fullscreen" allowfullscreen height="100%" 
                     src="https://iframe.mediadelivery.net/embed/372083/aec96ad9-7d8d-45b7-a2f5-12fb69084ba5?preload=true&responsive=true" 
