--- a/nagi/index.html
+++ b/nagi/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="robots" content="noindex, nofollow">
     <meta charset="UTF-8"> <!-- Specifies the character encoding for the document -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Sets the viewport for responsive design -->
     <title>Karlo Grošelj</title> <!-- Sets the title of the page -->
