--- a/index.html
+++ b/index.html
@@ -1,115 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta name="robots" content="noindex, nofollow">
-    <meta charset="UTF-8"> <!-- Specifies the character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Sets the viewport for responsive design -->
-    <title>Karlo Grošelj</title> <!-- Sets the title of the page -->
-    <style>
-body {
-    margin: 0; /* Removes default browser margin */
-    padding: 0 1vw; /* Adds padding to the left and right edges of the page */
-    background-color: DarkGrey; /* Sets the background color of the page */
-    color: Black; /* Sets the text color */
-    font-family: Arial, sans-serif; /* Sets the font family */
-    display: flex; /* Uses flexbox layout */
-    flex-direction: column; /* Stacks items vertically */
-    align-items: center; /* Centers items horizontally */
-    justify-content: flex-start; /* Aligns items to the top vertically */
-    height: auto; /* Adjusts height automatically */
-    min-height: 100vh; /* Ensures the page takes at least the full viewport height */
-    overflow-y: auto; /* Enables vertical scrolling if necessary */
-    gap: 0vw; /* Adds spacing between child elements */
-}
-
-header {
-    display: flex; /* Uses flexbox for layout */
-    flex-direction: column; /* Stacks items vertically */
-    align-items: flex-start; /* Aligns items to the left */
-    width: 100%; /* Makes the header take the full width */
-    padding: 2vw; /* Adds padding inside the header */
-    box-sizing: border-box; /* Includes padding and border in width/height calculations */
-}
-
-header h1 {
-    margin: 0; /* Removes default margin */
-    font-size: clamp(0.9rem, 2.5vw, 1.8rem); /* Smaller responsive font size for the title */
-}
-
-.video-container {
-    position: relative; /* Sets position for child elements */
-    width: 100%; /* Makes the container full width */
-    max-width: 3840px; /* Sets the maximum width */
-    aspect-ratio: 16 / 9; /* Maintains 16:9 aspect ratio */
-    margin-bottom: 2vw; /* Adds space below each video container */
-}
-
-iframe {
-    position: absolute; /* Positions iframe relative to its container */
-    top: 0; /* Aligns iframe to the top */
-    left: 0; /* Aligns iframe to the left */
-    width: 100%; /* Makes the iframe fill the container width */
-    height: 100%; /* Makes the iframe fill the container height */
-}
-
-.video-label {
-    position: absolute; /* Positions the label within the video container */
-    top: 1vw; /* Positions the label from the top */
-    left: 1vw; /* Positions the label from the left */
-    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background for the label */
-    padding: 0.5vw 1vw; /* Adds padding inside the label */
-    font-size: clamp(0.9rem, 2vw, 1.3rem); /* Smaller responsive font size for the label text */
-    color: white; /* Sets the text color */
-    border-radius: 0.3vw; /* Rounds the corners of the label */
-    z-index: 2; /* Ensures the label appears above other elements */
-}
-
-.video-overlay {
-    position: absolute; /* Positions the overlay within the container */
-    top: 0; /* Aligns the overlay to the top */
-    left: 0; /* Aligns the overlay to the left */
-    width: 100%; /* Makes the overlay fill the container width */
-    height: 100%; /* Makes the overlay fill the container height */
-    background-color: rgba(0, 0, 0, 0); /* Transparent background for the overlay */
-    z-index: 1; /* Ensures the overlay is behind the label */
-}
-    </style>
+    <title>Protected Page</title>
+    <script>
+        function checkPassword() {
+            const password = document.getElementById("password").value;
+            if (password === "kakec") {
+                window.location.href = "galerija/index.html"; // Redirect to the protected content
+            } else {
+                alert("Incorrect password. Try again.");
+            }
+        }
+    </script>
 </head>
 <body>
-    <header>
-        <div class="left"> <!-- Container for the header text -->
-            <h1>Karlov album gibljivih slik</h1> <!-- Main title of the page -->
-        </div>
-    </header>
-
-    <div class="video-container"> <!-- Container for the second video -->
-        <div class="video-label">Prvi dan—14. 1. 2025</div> <!-- Label for the second video -->
-        <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
-            <iframe allow="fullscreen" allowfullscreen height="100%" 
-                    src="https://iframe.mediadelivery.net/embed/372083/d9bfac04-b376-4561-8ac6-2ed9473302c3?preload=true&responsive=true" 
-                    width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"> <!-- Second video iframe -->
-            </iframe>
-        </div>
-    </div>
-  
-    <div class="video-container"> <!-- Container for the first video -->
-        <div class="video-label">Prvi dan doma—18. 1. 2025</div> <!-- Label for the first video -->
-        <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
-            <iframe allow="fullscreen" allowfullscreen height="100%" 
-                    src="https://iframe.mediadelivery.net/embed/372083/139c5403-2504-4608-a22e-fb9783c8c2db?preload=true&responsive=true" 
-                    width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"> <!-- First video iframe -->
-            </iframe>
-        </div>
-    </div>
-
-    <div class="video-container"> <!-- Container for the second video -->
-        <div class="video-label">Doječa mater—19. 1. 2025</div> <!-- Label for the second video -->
-        <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
-            <iframe allow="fullscreen" allowfullscreen height="100%" 
-                    src="https://iframe.mediadelivery.net/embed/372083/bd6ba4ad-2227-408b-8ea5-713cd26edf3d?preload=true&responsive=true" 
-                    width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"> <!-- Second video iframe -->
-            </iframe>
-        </div>
-    </div>
+    <h1>Enter Password</h1>
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="checkPassword()">Submit</button>
 </body>
 </html>
