--- a/index.html
+++ b/index.html
@@ -1,21 +1,113 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Protected Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bridge of Death</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #000033; /* Dark night-like background */
+            color: #fff; /* Bright text color */
+            font-family: 'IM Fell English SC', serif; /* Medieval-style font */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            min-height: 100vh; /* Allow content to expand beyond viewport if needed */
+            text-align: center;
+            background-image: url('https://via.placeholder.com/1200x800?text=Bridge+Background'); /* Placeholder for bridge background */
+            background-size: cover;
+            background-position: center;
+        }
+
+        h1 {
+            font-size: clamp(2rem, 5vw, 3.5rem); /* Responsive font size */
+            margin: 2rem 1rem 1rem;
+            color: #ff4500; /* Fiery red */
+            text-shadow: 2px 2px #000; /* Dramatic shadow */
+        }
+
+        h2 {
+            font-size: clamp(1.2rem, 3vw, 1.8rem); /* Responsive font size */
+            margin-bottom: 2rem;
+            color: #fff; /* Bright white */
+            text-shadow: 1px 1px #000;
+        }
+
+        .password-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 1rem;
+        }
+
+        input[type="password"] {
+            padding: 0.8rem;
+            font-size: 1.2rem;
+            border: 3px solid #ff4500; /* Fiery border */
+            border-radius: 8px;
+            outline: none;
+            margin-bottom: 1.5rem;
+            background: #222; /* Dark input field */
+            color: #fff; /* White text */
+            width: 80%; /* Responsive width */
+            max-width: 400px;
+        }
+
+        button {
+            background-color: #ff4500; /* Fiery red */
+            border: none;
+            border-radius: 8px;
+            padding: 0.8rem 2rem;
+            font-size: 1.2rem;
+            cursor: pointer;
+            color: #fff; /* White text */
+            font-weight: bold;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+        }
+
+        button:hover {
+            background-color: #ff6347; /* Lighter fiery red */
+            transform: scale(1.05);
+        }
+
+        .bridgekeeper {
+            font-size: 1.2rem;
+            margin-top: 2rem;
+            padding: 0 1rem;
+            color: #ff4500;
+            font-style: italic;
+        }
+
+        .bridge-image {
+            margin-top: 2rem;
+            max-width: 50%; /* Reduce the maximum width for smaller image */
+            height: auto; /* Maintains aspect ratio */
+            border-radius: 5%;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.7);
+        }
+    </style>
     <script>
         function checkPassword() {
-            const password = document.getElementById("password").value;
-            if (password === "kakec") {
+            const password = document.getElementById("password").value.toLowerCase();
+            if (password === "ni") {
                 window.location.href = "galerija/index.html"; // Redirect to the protected content
             } else {
-                alert("Incorrect password. Try again.");
+                alert("Wrong answer! Into the Gorge of Eternal Peril with you!");
             }
         }
     </script>
 </head>
 <body>
-    <h1>Enter Password</h1>
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="checkPassword()">Submit</button>
+    <h1>Stop! Who would cross the Bridge of Death?</h1>
+    <div class="password-container">
+        <p style="font-size: 1.5rem;">What is your favorite color?</p>
+        <input type="password" id="password">
+        <button onclick="checkPassword()">Submit Your Answer</button>
+    </div>
+    <p class="bridgekeeper">"Answer me this question, ere the other side ye see!"</p>
+    <img src="bridgekeeper.png" alt="Bridgekeeper" class="bridge-image">
 </body>
 </html>
