--- a/index.html
+++ b/index.html
@@ -108,6 +108,6 @@
         <button onclick="checkPassword()">Submit Your Answer</button>
     </div>
     <p class="bridgekeeper">"Answer me this question, ere the other side ye see!"</p>
-    <img src="bridgekeeper.png" alt="Bridgekeeper" class="bridge-image">
+    <img src="https://imgur.com/a/qCq73Uj" alt="Bridgekeeper" class="bridge-image">
 </body>
 </html>
