--- a/index.html
+++ b/index.html
@@ -83,10 +83,16 @@
 
         .bridge-image {
             margin-top: 2rem;
-            max-width: 50%; /* Reduce the maximum width for smaller image */
+            max-width: 50%; /* Default max width for larger screens */
             height: auto; /* Maintains aspect ratio */
             border-radius: 5%;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.7);
+        }
+
+        @media (max-width: 768px) {
+            .bridge-image {
+                max-width: 70%; /* Larger image for smaller screens */
+            }
         }
     </style>
     <script>
