--- a/galerija/index.html
+++ b/galerija/index.html
@@ -103,7 +103,7 @@ iframe {
     </div>
 
     <div class="video-container"> <!-- Container for the second video -->
-        <div class="video-label">Doječa mater—19. 1. 2025</div> <!-- Label for the second video -->
+        <div class="video-label">Portret doječe matere—19. 1. 2025</div> <!-- Label for the second video -->
         <div style="position:relative; width:100%; height:0px; padding-bottom:56.250%"> <!-- Wrapper to maintain aspect ratio -->
             <iframe allow="fullscreen" allowfullscreen height="100%" 
                     src="https://iframe.mediadelivery.net/embed/372083/bd6ba4ad-2227-408b-8ea5-713cd26edf3d?preload=true&responsive=true" 
