--- a/galerija/index.html
+++ b/galerija/index.html
@@ -4,7 +4,7 @@
 <meta name="robots" content="noindex, nofollow">
     <meta charset="UTF-8"> <!-- Specifies the character encoding for the document -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Sets the viewport for responsive design -->
-    <title>Karlo Grošelj</title> <!-- Sets the title of the page -->
+    <title>Karlo</title> <!-- Sets the title of the page -->
     <style>
 body {
     margin: 0; /* Removes default browser margin */
