--- a/galerija/index.html
+++ b/galerija/index.html
@@ -9,8 +9,8 @@
 body {
     margin: 0; /* Removes default browser margin */
     padding: 0 1vw; /* Adds padding to the left and right edges of the page */
-    background-color: DarkGrey; /* Sets the background color of the page */
-    color: Black; /* Sets the text color */
+    background-color: Black; /* Sets the background color of the page */
+    color: White; /* Sets the text color */
     font-family: Arial, sans-serif; /* Sets the font family */
     display: flex; /* Uses flexbox layout */
     flex-direction: column; /* Stacks items vertically */
